Fixed contact links on mobile

--- a/src/app/contact/contact.module.scss
+++ b/src/app/contact/contact.module.scss
@@ -99,3 +99,16 @@
     }
   }
 }
+
+
+@media (max-width: 768px) {
+  .text {
+    font-size: 4vw;
+    }
+  .contactLink {
+    font-size: 4vw;
+  }
+  .contactItem {
+    font-size: 4vw;
+  }
+}  
