--- a/src/app/globals.scss
+++ b/src/app/globals.scss
@@ -82,15 +82,11 @@ span {
           color: variables.$accent-color;
       }
     }
+  
+  span {
+    font-size: 4vw;
+  }
 }  
-
-span {
-  font-size: 2vm;
-  color: #fff;
-  text-decoration: none;
-  font-weight: 500;
-  display: inline;
-}
 
 @media (max-width: 992px) {
   header {
